# vcuda-controller

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  build-img.sh  find_new_lib.sh  vcuda.spec
.chglog/: config.yml
include/: cuda-helper.h  cuda-subset.h  hijack.h  nvml-helper.h  nvml-subset.h
src/: cuda_originals.c  hijack_call.c  loader.c  nvml_entry.c  register.c
tools/: monitor_dockernized.c
